<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_background"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".EditPopupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_close"
            android:onClick="closeOnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/circular_button"
            android:src="@drawable/ic_baseline_close_24"
            tools:ignore="UsingOnClickInXml"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edt_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/to_do"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="deleteOnClick"
            android:text="@string/delete"
            android:textColor="@color/redCustom"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="saveOnClick"
            android:text="@string/save"
            android:textColor="@color/cyan"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>