<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cyan"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:background="@android:color/transparent"
                    android:onClick="logoutOnClick"
                    android:text="@string/logout"
                    android:textAllCaps="false"
                    tools:ignore="RelativeOverlap,UsingOnClickInXml" />

                <TextView
                    android:id="@+id/todolist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/to_do_list"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:onClick="historyOnClick"
                    android:text="@string/history"
                    android:textAllCaps="false"
                    tools:ignore="RelativeOverlap,UsingOnClickInXml" />


            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                tools:ignore="UselessParent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>
        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:backgroundTint="@color/cyan"
        android:contentDescription="@string/todo"
        android:onClick="fabOnClick"
        app:backgroundTint="@color/white"
        app:rippleColor="@color/white"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="UnusedAttribute,UsingOnClickInXml" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>